--- a/vue/index.html
+++ b/vue/index.html
@@ -1,108 +1,143 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-	<head>
-		<title>Hello Vue</title>
-		<meta charset="utf-8">
-		<meta name="description" content="Vue.js - The Progressive JavaScript Framework">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	
-	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-	
-	</head>
-	
-	<body>
-	
-	<div id="app">
-	  {{ message }}
-	</div>
-	
-	<div id="app-2">
-	  <span v-bind:title="message">
-		鼠标悬停几秒钟查看此处动态绑定的提示信息！
-	  </span>
-	</div>
-	
-	<div id="app-3">
-	  <p v-if="seen">现在你看到我了</p>
-	</div>
-	
-	<div id="app-4">
-	  <ol>
-		<li v-for="todo in todos">
-		  {{ todo.text }}
-		</li>
-	  </ol>
-	</div>
-	
-	<div id="app-5">
-	  <p>{{ message }}</p>
-	  <button v-on:click="reverseMessage">逆转消息</button>
-	</div>
-	
-	<div id="app-6">
-	  <p>{{ message }}</p>
-	  <input v-model="message">
-	</div>
-	
-	
-	
-	<script>
-		var app = new Vue({
-		  el: '#app',
-		  data: {
-			message: 'Hello Vue!'
-		  }
-		})
-		
-		var app2 = new Vue({
-		  el: '#app-2',
-		  data: {
-			message: '页面加载于 ' + new Date().toLocaleString()
-		  }
-		})
-		
-		var app3 = new Vue({
-		  el: '#app-3',
-		  data: {
-			seen: true
-		  }
-		})
-		
-		var app4 = new Vue({
-		  el: '#app-4',
-		  data: {
-			todos: [
-			  { text: '学习 JavaScript' },
-			  { text: '学习 Vue' },
-			  { text: '整个牛项目' }
-			]
-		  }
-		})
-		
-		
-		var app5 = new Vue({
-		  el: '#app-5',
-		  data: {
-			message: 'Hello Vue.js!'
-		  },
-		  methods: {
-			reverseMessage: function () {
-			  this.message = this.message.split('').reverse().join('')
-			}
-		  }
-		})
-		
-		var app6 = new Vue({
-		  el: '#app-6',
-		  data: {
-			message: 'Hello Vue!'
-		  }
-		})
-		
-	</script>
-	
-	
-	
-	
-	</body>
-</htm>
+<html lang="zh-cn">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta content="black" name="apple-mobile-web-app-status-bar-style">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="no" name="apple-mobile-web-app-capable">
+    <title>vue练习</title>
+    <meta name="keywords" content="vue练习">
+    <meta name="description" content="vue练习">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+</head>
+
+<body>
+
+<div id="app">
+    {{ message }}
+</div>
+
+<div id="app-2">
+  <span v-bind:title="message">
+    鼠标悬停几秒钟查看此处动态绑定的提示信息！
+  </span>
+</div>
+
+<div id="app-3">
+    <p v-if="seen">现在你看到我了</p>
+</div>
+
+<div id="app-4">
+    <ol>
+        <li v-for="todo in todos">
+            {{ todo.text }}
+        </li>
+    </ol>
+</div>
+
+<div id="app-5">
+    <p>{{ message }}</p>
+    <button v-on:click="reverseMessage">逆转消息</button>
+</div>
+
+<div id="app-6">
+    <p>{{ message }}</p>
+    <input v-model="message">
+</div>
+
+<ol>
+    <!-- 创建一个 todo-item 组件的实例 -->
+    <todo-item></todo-item>
+</ol>
+
+<div id="app-7">
+    <ol>
+        <!--
+          现在我们为每个 todo-item 提供 todo 对象
+          todo 对象是变量，即其内容可以是动态的。
+          我们也需要为每个组件提供一个“key”，稍后再
+          作详细解释。
+        -->
+        <todo-item
+                v-for="item in groceryList"
+                v-bind:todo="item"
+                v-bind:key="item.id">
+        </todo-item>
+    </ol>
+</div>
+
+<script>
+    var app = new Vue({
+        el: '#app',
+        data: {
+            message: 'Hello Vue!'
+        }
+    })
+
+    var app2 = new Vue({
+        el: '#app-2',
+        data: {
+            message: '页面加载于 ' + new Date().toLocaleString()
+        }
+    })
+
+    var app3 = new Vue({
+        el: '#app-3',
+        data: {
+            seen: true
+        }
+    })
+
+    var app4 = new Vue({
+        el: '#app-4',
+        data: {
+            todos: [
+                { text: '学习 JavaScript' },
+                { text: '学习 Vue' },
+                { text: '整个牛项目' }
+            ]
+        }
+    })
+
+    var app5 = new Vue({
+        el: '#app-5',
+        data: {
+            message: 'Hello Vue.js!'
+        },
+        methods: {
+            reverseMessage: function () {
+                this.message = this.message.split('').reverse().join('')
+            }
+        }
+    })
+
+    var app6 = new Vue({
+        el: '#app-6',
+        data: {
+            message: 'Hello Vue!'
+        }
+    })
+
+    Vue.component('todo-item', {
+        // todo-item 组件现在接受一个
+        // "prop"，类似于一个自定义特性。
+        // 这个 prop 名为 todo。
+        props: ['todo'],
+        template: '<li>{{ todo.text }}</li>'
+    })
+
+    var app7 = new Vue({
+        el: '#app-7',
+        data: {
+            groceryList: [
+                { id: 0, text: '蔬菜' },
+                { id: 1, text: '奶酪' },
+                { id: 2, text: '随便其它什么人吃的东西' }
+            ]
+        }
+    })
+</script>
+
+</body>
+</html>
