--- a/vue/single/02-单向绑定.html
+++ b/vue/single/02-单向绑定.html
@@ -15,13 +15,21 @@
     </div>
     <script src="vue.min.js"></script>
     <script>
-        new Vue({
-            el: '#app',
-            data: {
-                msg: 'color: green;', 
-                msg2: 'color: red;'
+        const App = {
+            data() {
+                return {
+                    msg: 'color: green;', 
+                    msg2: 'color: red;'
+                }
+            },
+            methods:{
+                show() {
+                    console.log("show")
+                    return 'show'
+                }
             }
-        })
+        }
+        Vue.createApp(App).mount('#app')
     </script>
 </body>
 </html>
