--- a/vue/single/04-事件绑定.html
+++ b/vue/single/04-事件绑定.html
@@ -15,17 +15,19 @@
     </div>
     <script src="vue.min.js"></script>
     <script>
-        new Vue({
-            el: '#app',
-            data: {
-                keyword: '小A学编程'
+        const App = {
+            data() {
+                return {
+                    keyword: '小A学编程'
+                }
             },
             methods:{
                 show() {
                     console.log("show")
                 }
             }
-        })
+        }
+        Vue.createApp(App).mount('#app')
     </script>
 </body>
 </html>
